--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "description": "A set of functional utilities",
   "main": "backwards.js",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.8.0", 
     "grunt-saucelabs": "^8.1.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "grunt test"
   },
